FIx background color flickering on load

--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -75,6 +75,11 @@
   }
 }
 
+html.no-transition,
+html.no-transition * {
+  transition: none !important;
+}
+
 *,
 *::before,
 *::after {
